Add wx implementation for pathGetFilename
Reviewed by David D. Kilzer.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27998 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-24  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Add wx implementation for pathGetFilename
+
+        Reviewed by David D. Kilzer.
+
+        * html/HTMLFormElement.cpp:
+        (WebCore::pathGetFilename):
+
 2007-11-23  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Adam Roben.
