Windows build fix
        Turn off the change made in r27984 on Windows for now.

        * xml/XSLTProcessor.cpp:
        (WebCore::XSLTProcessor::transformToString):
        * xml/XSLTUnicodeSort.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28003 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-24  Adam Roben  <aroben@apple.com>
+
+        Windows build fix
+
+        Turn off the change made in r27984 on Windows for now.
+
+        * xml/XSLTProcessor.cpp:
+        (WebCore::XSLTProcessor::transformToString):
+        * xml/XSLTUnicodeSort.cpp:
+
 2007-11-24  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Adam Roben.
