--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-25  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        Fix http://bugs.webkit.org/show_bug.cgi?id=16129
+        Bug 16129: REGRESSION (r27761-r27811): malloc error while visiting http://mysit.es (crashes release build)
+
+        * pcre/pcre_compile.cpp: Change errorcode to be passed by reference so that any error code is propagated
+        to our caller like they expect.
+
 2007-11-23  Kevin Ollivier  <kevino@theolliviers.com>
 
         MSVC7 build fix. (rand_s doesn't exist there)
