Fix Bug 16133: Implement pixel test support on Windows
 WebKit/win:

         Add ImageDiff.vcproj to WebKit.sln

         Reviewed by Sam.

         * WebKit.vcproj/WebKit.sln:

 WebKitTools:

         Port ImageDiff to CG and C++

         Final part of http://bugs.webkit.org/show_bug.cgi?id=16133
         <rdar://5071708>

         Reviewed by Sam.

         * DumpRenderTree/DumpRenderTree.sln: Added ImageDiff.vcproj.
         * DumpRenderTree/cg/ImageDiffCG.cpp: Added.
         (main):
         (createImageFromStdin):
         (compareImages):
         (getDifferenceBitmap):
         (computePercentageDifferent):
         * DumpRenderTree/win/ImageDiff.vcproj: Added.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28023 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-25  Adam Roben  <aroben@apple.com>
+
+        Add ImageDiff.vcproj to WebKit.sln
+
+        Reviewed by Sam.
+
+        * WebKit.vcproj/WebKit.sln:
+
 2007-11-17  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Mark Rowe.
