Reviewed by Adam Roben.
        - fix off-center error images

        Covered by many pixel tests with missing images

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::paint): Account for the 1 pixel outline when
        positioning the error image.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28025 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,15 @@
+2007-11-25  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Adam Roben.
+
+        - fix off-center error images
+
+        Covered by many pixel tests with missing images
+
+        * rendering/RenderImage.cpp:
+        (WebCore::RenderImage::paint): Account for the 1 pixel outline when
+        positioning the error image.
+
 2007-11-25  Kevin Ollivier  <kevino@theolliviers.com>
 
         wx build fix. Fix filename case for case-sensitive filesystems.
