--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-25  Adam Roben  <aroben@apple.com>
+
+        * platform/win/Skipped: Remove an unnecessary entry.
+
 2007-11-25  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Dan Bernstein.
