* platform/win/Skipped: Add a known failure.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28034 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-25  Adam Roben  <aroben@apple.com>
 
+        * platform/win/Skipped: Add a known failure.
+
+2007-11-25  Adam Roben  <aroben@apple.com>
+
         * platform/win/Skipped: Remove an unnecessary entry.
 
 2007-11-25  Mark Rowe  <mrowe@apple.com>
