2007-11-26  Alp Toker  <alp@atoker.com>
        GTK+/Qt/Wx build fix for breakage introduced in r28039.

        * ForwardingHeaders/JavaScriptCore/JSRetainPtr.h: Added.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28040 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-26  Alp Toker  <alp@atoker.com>
+
+        GTK+/Qt/Wx build fix for breakage introduced in r28039.
+
+        * ForwardingHeaders/JavaScriptCore/JSRetainPtr.h: Added.
+
 2007-11-24  Laszlo Gombos  <laszlo.gombos@gmail.com>
 
         Reviewed by Maciej Stachowiak.
